[gd_scene load_steps=9 format=3 uid="uid://f0nvmdfvluh4"]

[ext_resource type="Script" path="res://GameElements/defense/turret.gd" id="1_c4q16"]
[ext_resource type="Shader" path="res://Shaders/sokpop.gdshader" id="2_3qxle"]
[ext_resource type="Texture2D" uid="uid://b5v7ycymulj75" path="res://Assets/Zone/bande1.png" id="2_26sh2"]
[ext_resource type="Texture2D" uid="uid://cqd7ep7gabify" path="res://Assets/Defense/turret.png" id="2_c3r0p"]
[ext_resource type="Texture2D" uid="uid://dubvh5jsaaofj" path="res://Shaders/normal.jpg" id="3_vsh7u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_crnf5"]
shader = ExtResource("2_3qxle")
shader_parameter/strength = 0.015
shader_parameter/speed = 6.0
shader_parameter/frames = 6
shader_parameter/flowMap = ExtResource("3_vsh7u")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eyh6e"]
size = Vector2(21, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ejl3"]
size = Vector2(26, 31)

[node name="Turret" type="Node2D"]
modulate = Color(0.223529, 0.745098, 1, 0.545098)
position = Vector2(386, 196)
script = ExtResource("1_c4q16")

[node name="Turret" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_crnf5")
position = Vector2(-4, -2)
rotation = 1.57079
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_c3r0p")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
unique_name_in_owner = true
z_index = 1
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_eyh6e")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ShootZone" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(3, 0)
collision_mask = 2
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShootZone"]
position = Vector2(-66, -7.27177e-06)
scale = Vector2(18.5771, 2.96205)
polygon = PackedVector2Array(12.9191, 22.2819, 12.9191, -23.2947, 0.861275, -0.337601)

[node name="ShootingPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-5, -1)
scale = Vector2(1.09297, 1)

[node name="TimerShoot" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.5
autostart = true

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(3, 0)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, -1)
shape = SubResource("RectangleShape2D_1ejl3")
debug_color = Color(0.755894, 0.189016, 1, 0.42)

[node name="ShootingZoneSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(2.74345e-06, 0.797629, 0.290157, 1)
position = Vector2(64, -1)
rotation = -1.57079
scale = Vector2(0.26737, 0.448721)
texture = ExtResource("2_26sh2")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_exited" from="ShootZone" to="." method="_on_shoot_zone_body_exited"]
[connection signal="timeout" from="TimerShoot" to="." method="_on_timer_shoot_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
